<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">时光记忆</string>
    <string name="app_us">北京盈力网络科技有限公司</string>
    <string name="app_protocol"><u>用户协议</u></string>
    <string name="app_addmemory">书写记忆</string>
    <string name="app_address">地址</string>
    <string name="app_appoint"> 指定圈子</string>
    <string name="app_addcircle"> 创建新编辑部</string>
    <string name="app_choosefriend"> 选好友</string>
    <string name="app_addfriend"> 加好友</string>
    <string name="app_addhide"> 隐私设置</string>
    <string name="app_addtag"> 选记忆签</string>
    <string name="app_editaddress"> 选择地区</string>
    <string name="app_begin"> 开启记忆</string>
    <string name="app_cache">存储空间</string>
    <string name="app_create">创 建</string>
    <string name="app_cancle">取消</string>
    <string name="app_circle">编辑部</string>
    <string name="app_comment">评论</string>
    <string name="app_company">公司</string>
    <string name="app_clean">清空</string>
    <string name="app_confirm">确定</string>
    <string name="app_delete">删除</string>
    <string name="app_location">定位</string>
    <string name="app_eddit">编辑</string>
    <string name="app_editmemory">编辑记忆</string>
    <string name="app_email">邮箱</string>
    <string name="app_verifyemail">验证邮箱</string>
    <string name="app_friend">好友资料</string>
    <string name="app_contacts">通讯录朋友</string>
    <string name="app_forward">转一转</string>
    <string name="app_addtarget">选择编辑部</string>
    <string name="app_findpwd">找回密码</string>
    <string name="app_friend_choose">添加好友</string>
    <string name="app_feedback">意见反馈</string>
    <string name="app_fork">评论&amp;点赞</string>
    <string name="app_friendapply">好友申请</string>
    <string name="app_group">选圈子&amp;群</string>
    <string name="app_grouppwd"> 编辑部密码</string>
    <string name="app_jump"> 跳过</string>
    <string name="app_login">登 录</string>
    <string name="app_qrcode">二维码</string>
    <string name="app_mymemory">我的记忆</string>
    <string name="app_messagedel">待处理事项</string>
    <string name="app_nick">名字</string>
    <string name="app_goon">继续</string>
    <string name="app_release">发布</string>
    <string name="app_remark">备注信息</string>
    <string name="app_newfriend"> 添加好友</string>
    <string name="app_next">下一步</string>
    <string name="app_ok"> 完成</string>
    <string name="app_push">新消息通知</string>
    <string name="app_profession">行业</string>
    <string name="app_nosee"> 不给谁看</string>
    <string name="app_private"> 私密记忆</string>
    <string name="app_prompt"> 提醒谁看</string>
    <string name="app_register">注册</string>
    <string name="app_report">举报</string>
    <string name="app_subcricle"> 分圈子</string>
    <string name="app_supportmemory">追加记忆</string>
    <string name="app_secret"> 隐私设置</string>
    <string name="app_sort"> 圈子排序</string>
    <string name="app_save"> 保存</string>
    <string name="app_sex"> 性别</string>
    <string name="app_sign"> 个性签名</string>
    <string name="app_security"> 账户安全</string>
    <string name="app_shared">分享</string>
    <string name="app_shared_sign">浏览别人发的记忆,只有转存记忆和分享这两项</string>
    <string name="app_submit">完成</string>
    <string name="app_tagmanager">记忆签</string>
    <string name="app_uppwd">修改密码</string>
    <string name="app_upphone">修改手机号</string>
    <string name="app_upcirclename">修改编辑部</string>
    <string name="app_add_friend">加为好友</string>
    <string name="app_preview">预览</string>
    <string name="addfriend_tv">你和TA不是好友,看不了TA的资料</string>
    <string name="about_report_tv">推荐给好友</string>
    <string name="addmemory_assign">指定圈子</string>
    <string name="addmemory_hint">抒写你的记忆...</string>
    <string name="addmemory_nosee">不给谁看</string>
    <string name="addmemory_open">公开</string>
    <string name="addmemory_prompt">提醒谁看</string>
    <string name="addmemory_power">补充记忆权限</string>
    <string name="addmemory_secret">私密</string>
    <string name="addmemory_friend">仅好友</string>
    <string name="addmemory_tag">贴记忆签</string>
    <string name="apply_success">邀请成功</string>
    <string name="apply_message">时光记忆-找回过往，记录现在。时光记忆下载地址：http://www.51sgjy.com 记得安装后添加我为好友哦。</string>
    <string name="add_tag_tv">此编辑部的主编暂无创建记忆签</string>
    <string name="all_persons">所有人</string>
    <string name="block_sign">发现账号被盗,你可以冻结账号</string>
    <string name="block_sign2">防止坏人窃取你的个人隐私\n防止坏人冒用你的身份诈骗好友</string>
    <string name="call_empty">请先输入手机号码</string>
    <string name="call_length">请先输入正确的手机号码</string>
    <string name="call_error">号码格式错误</string>
    <string name="close_app">关闭</string>
    <string name="crop__saving">保存</string>
    <string name="crop__wait">请稍等</string>
    <string name="crop__pick_error">没有图片</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="circle_new">我的新好友</string>
    <string name="circle_create">编辑部</string>
    <string name="circle_tag">记忆签</string>
    <string name="circle_up">同步通讯录</string>
    <string name="circle_own">我的圈子</string>
    <string name="circle_create_hint">填写编辑部名称（2~10个字）</string>
    <string name="circle_orcode_tv">圈子二维码</string>
    <string name="circle_uname_tv">修改圈子名</string>
    <string name="circle_manage_tv">管理群标签</string>
    <string name="circle_add_tv">添加成员</string>
    <string name="circle_delete_tv">删除成员</string>
    <string name="circle_exit_tv">退出圈子</string>
    <string name="circle_copy_tv">复制圈子ID</string>
    <string name="current_loc">所在位置</string>
    <string name="choose_ok">完成(%1$s)</string>
    <string name="clipboard_copyId">复制成功</string>
    <string name="crop_suc">裁剪成功</string>
    <string name="crop_fail">裁剪失败</string>
    <string name="contacts_add">添加</string>
    <string name="contacts_apply">邀请</string>
    <string name="contacts_added">已添加</string>
    <string name="comment_tag">回复</string>
    <string name="comment_sign">评论%1$s条</string>
    <string name="comment_colon">&#160;&#058;&#160;</string>
    <string name="data_statistics">数据统计</string>
    <string name="data_error">数据异常</string>
    <string name="email">邮箱</string>
    <string name="error_occurred_explanation">发生意外错误 \n非常抱歉</string>
    <string name="fork">赞</string>
    <string name="feedback_hint">请输入您的意见...</string>
    <string name="format_num">%1$s(%2$s)</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_sign_hint">填写您绑定的邮箱地址</string>
    <string name="friend_sacn_tv">扫一扫</string>
    <string name="friend_sacnhint_tv">扫描我的二维码</string>
    <string name="friend_constacts_tv">手机联系人</string>
    <string name="friend_constactshint_tv">添加通讯录中的朋友</string>
    <string name="friend_wechat_tv">微信好友</string>
    <string name="friend_wechathint_tv">添加微信中的朋友</string>
    <string name="friend_circle_tv">朋友圈</string>
    <string name="friend_circlehint_tv">分享到微信朋友圈</string>
    <string name="friend_wechatf">我是时光记忆，可以自己写一本私密的记忆之书，独自欣赏.可以和家人一起记录孩子的成长记忆，和爱人一起书写甜蜜生活，和同学一起共叙同窗之情，和好友一起分享共同爱好，和同事一起记录奋斗经历</string>
    <string name="friend_wechatc">一起来写一本记忆之书吧。</string>
    <string name="friend_wechat">时光记忆-找回过往，记录现在。</string>
    <string name="group_apply">申请加入</string>
    <string name="group_creater">主编 : %1$s</string>
    <string name="group_name">编辑部名</string>
    <string name="group_admin">主编</string>
    <string name="group_ercode">二维码</string>
    <string name="group_copyId">编辑部ID</string>
    <string name="group_pwd">编辑部密码</string>
    <string name="group_memorys">记忆数</string>
    <string name="group_addmemorys">补充记忆数</string>
    <string name="group_copyId_hint">点击即复制成功</string>
    <string name="group_pwd_readey">密码已设置</string>
    <string name="group_pwd_set">设置密码</string>
    <string name="group_pwd_empty">请设置密码</string>
    <string name="group_pwd_length">密码长度错误</string>
    <string name="group_exit">删除并退出</string>
    <string name="group_invite">发送邀请链接</string>
    <string name="group_invite_hint">其他好友通过ID在首页搜索到此编辑部</string>
    <string name="import_contacts">通讯录是创建记忆的基础，同步通讯录\n您将看到好友分享的记忆!</string>
    <string name="import_circle">您有%1$s个好友已开通时光记忆\n有%2$s个群邀请你加入</string>
    <string name="i_create_editorial">我创建的编辑部</string>
    <string name="i_add_editoral">我加入的编辑部</string>
    <string name="i_release_memory_number">我发布的记忆数</string>
    <string name="i_add_other_memory_number">我补充别人的记忆数</string>
    <string name="login_password">密码</string>
    <string name="login_verifty">获取验证码</string>
    <string name="login_phone_notice">请输入手机号码</string>
    <string name="login_pwd_in">请输入密码</string>
    <string name="login_pwd_error">登录密码错误输入错误</string>
    <string name="login_email_in">请输入邮箱</string>
    <string name="login_email_verify">请输入邮箱验证码</string>
    <string name="login_nick_in">请输入姓名</string>
    <string name="login_phone_length">手机号码长度错误</string>
    <string name="login_phone_reg">手机号码格式错误</string>
    <string name="login_pwd_length">密码长度错误</string>
    <string name="login_pwd_reg">密码格式错误</string>
    <string name="login_email_error">邮箱格式错误</string>
    <string name="login_emailcode_error">邮箱验证码格式错误</string>
    <string name="login_verifty_notice">请输入验证码</string>
    <string name="login_email_notice">请输入邮箱</string>
    <string name="login_emailverify_notice">请输入邮箱验证码</string>
    <string name="login_verifty_length">验证码格式错误</string>
    <string name="login_pwd_notice">请设置密码</string>
    <string name="login_identifying_code">发送验证码</string>
    <string name="login_send_error">发送验证码失败</string>
    <string name="login_send_success">发送验证码成功</string>
    <string name="login_key_notice">请输入短信验证码</string>
    <string name="login_notice">无需注册，输入手机号即可登录</string>
    <string name="login_forgetpwd">忘记密码?</string>
    <string name="login_wechat_tv">微信登录</string>
    <string name="login_reset_tv">切换账号</string>
    <string name="import_contacts_tv">立即开启</string>
    <string name="import_circle_tv">立即加入</string>
    <string name="main_group">群</string>
    <string name="main_memory">记忆 </string>
    <string name="main_circle">通讯录</string>
    <string name="main_message">消息 </string>
    <string name="main_mine">我 </string>
    <string name="memory_release">发圈子 </string>
    <string name="memory_add">补充记忆 </string>
    <string name="memory_prompt_num">有新记忆(%1$s) </string>
    <string name="memory_prompt_name">同时提到你的新记忆有 </string>
    <string name="memory_prompt_name_article"> 条</string>
    <string name="memory_retrieve">检索（好友id，标题，内容）</string>
    <string name="memory_sign">当前记忆发布之后,仅 %1$s 可见</string>
    <string name="memory_groupsign">圈子</string>
    <string name="memory_comment_hint">记得要评论哦~</string>
    <string name="memory_hot">热度</string>
    <string name="memory_detail">%1$s的记忆</string>
    <string name="memory_time">时间</string>
    <string name="memory_tag">记忆签</string>
    <string name="memory_comment">评论</string>
    <string name="memory_adduser">by%1$s</string>
    <string name="message_refuse_tv">拒绝</string>
    <string name="message_deal_hint">暂无待处理事项</string>
    <string name="message_through_tv">同意</string>
    <string name="message_accept_tv">接受</string>
    <string name="message_undetail_tv">您有%1$s个待处理事项</string>
    <string name="message_unRead_tv">待处理事项</string>
    <string name="maxsize_zero_tip">maxsize 应该大于0</string>
    <string name="memory_tagall_tv">全部</string>
    <string name="memoryd_add_tv">补充记忆</string>
    <string name="memory_start">开启篇章</string>
    <string name="memory_unread">未读</string>
    <string name="memory_add_">补充的记忆%1$s条</string>
    <string name="memory_more_tv">继续(%1$s)</string>
    <string name="memory_priase_">此记忆暂无点赞</string>
    <string name="memory_writer">书写记忆</string>
    <string name="memory_createG">建编辑部</string>
    <string name="memory_addfriend">添加好友</string>
    <string name="memory_sacn">扫一扫&#160;&#160;&#160;&#160;</string>
    <string name="memory_top">“时光记忆”找回曾经的故人 忆起美好的往事</string>
    <string name="newfriend_submit">确认添加</string>
    <string name="newfriend_name">姓名</string>
    <string name="newfriend_phone">电话</string>
    <string name="newfriend_phone_hint">请输入电话</string>
    <string name="safe_repwd_hint">请设置新密码</string>
</resources>