<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/popu_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_10dp"
        android:layout_marginTop="@dimen/common_22dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@id/circle_orcode_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_orcode_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_copy_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_copy_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_manage_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_manage_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_uname_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_uname_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_add_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_add_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_delete_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_delete_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>

        <TextView
            android:id="@id/circle_exit_tv"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:text="@string/circle_exit_tv"
            android:textColor="@color/popu_tv_bg"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>