<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/circle_up_ll"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/common_1dp"
        android:layout_marginTop="@dimen/common_10dp"
        android:background="@drawable/mine_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_12dp"
            android:src="@drawable/upcontacts"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/circle_up"
            android:textColor="@color/common_font_black"
            android:textSize="@dimen/tv_14_sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/circle_create_ll"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/common_1dp"
        android:background="@drawable/mine_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_12dp"
            android:src="@drawable/circle_edit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/circle_create"
            android:textColor="@color/common_font_black"
            android:textSize="@dimen/tv_14_sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/circle_tag_ll"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/mine_ll"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_12dp"
            android:src="@drawable/label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:text="@string/circle_tag"
            android:textColor="@color/common_font_black"
            android:textSize="@dimen/tv_14_sp"/>
    </LinearLayout>
</LinearLayout>